<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_01"
    >

    <ImageView
        android:id="@+id/App_logo"
        android:layout_width="160dp"
        android:layout_height="148dp"
        android:layout_gravity="center"
        android:src="@drawable/hay_street_healthy_hub_logo"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/LoginEmailInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:hint="@string/Hint_LoginEmail"
        android:inputType="text"
        android:textSize="20sp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/login_username"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="10dp"

        />

    <EditText
        android:id="@+id/LoginPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:hint="@string/Hint_LoginPassword"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/login_password"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="35dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:gravity="center"
            android:text="@string/Doctor_Text"
            android:textSize="15sp"

            android:textStyle="bold" />

        <Switch
            android:id="@+id/LoginDoctorSwitch"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="15dp"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        >


        <Button
            android:id="@+id/ButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Button_Login"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ButtonRegistration"
            android:text="@string/Button_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_registration"
            android:layout_marginTop="30dp"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/ButtonContactUs"
            android:text="@string/Button_ContactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            style="@style/Widget.AppCompat.Button.Borderless"/>


    </LinearLayout>

</LinearLayout>