<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientHomeMenuActivity04"
    android:id="@+id/PatientHomeDrawerLayout"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/PatientHomeToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9FC96F"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/toolbar_menu_icon"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/PatientHomeCustomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:paddingStart="30dp"
                android:text="@string/Patient_Home_Title"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/profile_edit_icon"
                android:visibility="invisible"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:background="@drawable/profile_edit_button"
                />

        </androidx.appcompat.widget.Toolbar>
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/PatientHomeNavView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/main_menu_header"
        app:menu="@menu/patient_main_menu">
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>