<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:background="@color/appointment_list_bg"
    >

        <!-- GP -->
    <LinearLayout
        android:id="@+id/gp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/allerta"
            android:text="@string/Text_GP"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/Booking_GP"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="70dp"
            android:background="@drawable/custom_input"
            android:fontFamily="@font/allerta"
            android:textSize="18dp"

            />
    </LinearLayout>

        <!-- Visit Reason -->
        <LinearLayout
            android:id="@+id/reason_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_below="@id/gp_layout"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_VisitReason"
                android:fontFamily="@font/allerta"
                android:textSize="18dp"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/Booking_VisitReason"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_input"
                android:maxLength="68"
                android:fontFamily="@font/allerta"
                android:textSize="18dp"
                />
        </LinearLayout>

        <!-- Visit Date -->
        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_below="@id/reason_layout">

            <!-- Date -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_Date"
                android:fontFamily="@font/allerta"
                android:textSize="18dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/Booking_Date"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/user_registration_dob"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:hint="@string/Text_Dob_Hint"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:fontFamily="@font/allerta"
                android:textSize="18dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <!-- Visit Time -->
    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_layout"
        android:layout_marginTop="35dp">

        <!-- Time -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Text_Time"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/Booking_Time"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/user_registration_dob"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:hint="@string/Text_Booking_Time_Hint"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/Booking_Booking"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/custom_button"
        android:text="@string/Button_Booking"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp" />


</RelativeLayout>