<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appointment_list_bg">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/appointment_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:id="@+id/bookingButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="#C9FFFFFF">

        <Button
            android:id="@+id/appointment_list_booking"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Button_Booking"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>